--- a/app/src/main/res/layout/class_layout.xml
+++ b/app/src/main/res/layout/class_layout.xml
@@ -11,7 +11,7 @@
 
     <!-- Subtitle -->
     <TextView
-        android:id="@+id/textViewSubtitle"
+        android:id="@+id/major_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toTopOf="@+id/legendContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewSubtitle">
+        app:layout_constraintTop_toBottomOf="@id/major_header">
 
         <HorizontalScrollView
             android:id="@+id/horizontalScroll"
@@ -66,6 +66,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
+            android:id="@+id/completed_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -75,6 +76,7 @@
             app:drawableStartCompat="@android:drawable/presence_online" />
 
         <TextView
+            android:id="@+id/inprogress_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -84,6 +86,7 @@
             app:drawableStartCompat="@android:drawable/presence_away" />
 
         <TextView
+            android:id="@+id/required_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="4dp"
