--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -18,11 +18,11 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkedTextView"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPass"
         android:layout_marginTop="24dp" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/email"
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:autofillHints="@string/prompt_email"
@@ -31,11 +31,11 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
+        app:layout_constraintTop_toBottomOf="@+id/lastName"
         android:layout_marginTop="16dp" />
 
     <CheckedTextView
-        android:id="@+id/checkedTextView"
+        android:id="@+id/forgotPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password?"
@@ -55,7 +55,7 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username"
+        app:layout_constraintTop_toBottomOf="@+id/email"
         android:layout_marginTop="16dp" />
 
     <ProgressBar
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageViewLogo"
+        android:id="@+id/utampaLOGO"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:contentDescription="University Logo"
@@ -81,7 +81,7 @@
         android:layout_marginTop="32dp" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/firstName"
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -89,11 +89,11 @@
         android:hint="First Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
+        app:layout_constraintTop_toBottomOf="@+id/utampaLOGO"
         android:layout_marginTop="24dp" />
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/lastName"
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -101,7 +101,7 @@
         android:hint="Last Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/firstName"
         android:layout_marginTop="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
