--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -8,7 +8,7 @@
     tools:context=".BlankFragment">
 
     <ImageView
-        android:id="@+id/imageViewLogo"
+        android:id="@+id/utampaLOGO"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:contentDescription="University Logo"
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.175" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/UplanTEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:shadowColor="#000000"
@@ -38,7 +38,7 @@
         tools:layout_editor_absoluteY="400dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/SignUpBtn"
         android:layout_width="278dp"
         android:layout_height="61dp"
         android:backgroundTint="#d22031"
@@ -51,7 +51,7 @@
         tools:layout_editor_absoluteY="590dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/loginBtn"
         android:layout_width="278dp"
         android:layout_height="61dp"
         android:backgroundTint="#d22031"
