--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/white"
     android:paddingLeft="@dimen/fragment_horizontal_margin"
     android:paddingTop="@dimen/fragment_vertical_margin"
     android:paddingRight="@dimen/fragment_horizontal_margin"
@@ -14,22 +14,22 @@
 
     <Button
         android:id="@+id/login"
-        android:layout_width="278dp"
-        android:layout_height="61dp"
-        android:textSize="20sp"
+        android:layout_width="@dimen/button_width_regular"
+        android:layout_height="@dimen/button_height_regular"
+        android:textSize="@dimen/text_size_subhead"
         android:layout_gravity="start"
-        android:backgroundTint="#d22031"
+        android:backgroundTint="@color/brand_red"
         android:enabled="false"
         android:text="@string/action_sign_in"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkedTextView"
-        android:layout_marginTop="24dp" />
+        android:layout_marginTop="@dimen/spacing_large" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="331dp"
+        android:layout_width="@dimen/edit_text_width"
         android:layout_height="wrap_content"
         android:autofillHints="@string/prompt_password"
         android:hint="@string/prompt_password"
@@ -37,32 +37,34 @@
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
+        android:minHeight="@dimen/min_touch_target_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="@dimen/fragment_vertical_margin" />
 
     <CheckedTextView
         android:id="@+id/checkedTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="@dimen/fragment_vertical_margin" />
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="331dp"
+        android:layout_width="@dimen/edit_text_width"
         android:layout_height="wrap_content"
         android:autofillHints="@string/prompt_email"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
+        android:minHeight="@dimen/min_touch_target_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
-        android:layout_marginTop="32dp" />
+        android:layout_marginTop="@dimen/spacing_xlarge" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -77,13 +79,13 @@
 
     <ImageView
         android:id="@+id/imageViewLogo"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:contentDescription="University Logo"
+        android:layout_width="@dimen/image_view_logo_size"
+        android:layout_height="@dimen/image_view_logo_size"
+        android:contentDescription="@string/university_logo_description"
         android:src="@drawable/UT_Spartans_wordmark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="64dp" />
+        android:layout_marginTop="@dimen/spacing_xxlarge" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
