--- a/app/src/main/res/layout/skeleton.xml
+++ b/app/src/main/res/layout/skeleton.xml
@@ -8,17 +8,18 @@
     <View
         android:id="@+id/header_bg"
         android:layout_width="0dp"
-        android:layout_height="85dp"
-        android:background="#D52F3C"
+        android:layout_height="@dimen/header_height"
+        android:background="@color/brand_red_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageViewLogo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/header_logo_size"
+        android:layout_height="@dimen/header_logo_size"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:contentDescription="@string/university_logo_description"
         app:layout_constraintBottom_toBottomOf="@id/header_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/header_bg"
@@ -28,14 +29,14 @@
         android:id="@+id/textViewAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="U-PLAN"
+        android:text="@string/u_plan_title"
         android:textColor="@color/white"
-        android:textSize="36sp"
+        android:textSize="@dimen/text_size_app_name"
         android:textStyle="bold"
-        android:shadowColor="#40000000"
-        android:shadowDx="4"
-        android:shadowDy="4"
-        android:shadowRadius="4"
+        android:shadowColor="@color/black_transparent_25"
+        android:shadowDx="@dimen/shadow_offset"
+        android:shadowDy="@dimen/shadow_offset"
+        android:shadowRadius="@dimen/shadow_radius"
         app:layout_constraintBottom_toBottomOf="@id/header_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +46,8 @@
     <View
         android:id="@+id/bottom_nav_bg"
         android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:background="#d22031"
+        android:layout_height="@dimen/bottom_nav_height"
+        android:background="@color/brand_red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -55,7 +56,7 @@
     <LinearLayout
         android:id="@+id/nav_buttons_container"
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/bottom_nav_height"
         android:orientation="horizontal"
         android:weightSum="5"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,6 +68,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/flowchart_button_description"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@android:drawable/ic_menu_sort_by_size"
             app:tint="@color/white" />
@@ -76,6 +78,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/advisor_button_description"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@android:drawable/ic_menu_myplaces"
             app:tint="@color/white" />
@@ -90,6 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/help_button_description"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@android:drawable/ic_menu_help"
             app:tint="@color/white" />
@@ -99,6 +103,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:contentDescription="@string/faq_button_description"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@android:drawable/ic_menu_info_details"
             app:tint="@color/white" />
@@ -107,12 +112,12 @@
     <!-- Account Button -->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/center_button_card"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="5dp"
-        app:cardCornerRadius="40dp"
-        app:cardBackgroundColor="#800000"
-        app:cardElevation="12dp"
+        android:layout_width="@dimen/center_button_size"
+        android:layout_height="@dimen/center_button_size"
+        android:layout_marginBottom="@dimen/center_button_margin_bottom"
+        app:cardCornerRadius="@dimen/center_button_corner_radius"
+        app:cardBackgroundColor="@color/maroon"
+        app:cardElevation="@dimen/center_button_elevation"
         app:strokeWidth="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/bottom_nav_bg"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,8 +129,9 @@
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@android:drawable/ic_menu_gallery"
+            android:contentDescription="@string/profile_button_description"
             android:scaleType="centerInside"
-            android:padding="16dp"
+            android:padding="@dimen/fragment_horizontal_margin"
             app:tint="@color/white" />
     </com.google.android.material.card.MaterialCardView>
 
