--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,7 +24,7 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkedTextView"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPass"
         android:layout_marginTop="@dimen/spacing_large" />
 
     <EditText
