--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -18,7 +18,7 @@
         android:textSize="@dimen/text_size_subhead"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkedTextView"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPass"
         android:layout_marginTop="@dimen/spacing_large" />
 
     <EditText
