--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav.xml"
+    android:id="@+id/nav_graph"
     app:startDestination="@id/StartingScreen">
 
     <fragment
@@ -49,6 +49,10 @@
         android:name="com.vanarsdale.makinganav.StudentProfileFragment"
         android:label="student_profile"
         tools:layout="@layout/fragment_studentprofile" >
+        <argument
+            android:name="userId"
+            app:argType="string"
+            android:defaultValue="default_user_id" />
         <action
             android:id="@+id/action_StudentProfile_to_AdvisingInfo"
             app:destination="@id/AdvisingInfo" />
@@ -85,6 +89,11 @@
         android:name="com.vanarsdale.makinganav.FAQ_Resources"
         android:label="fragment_f_a_q__resources"
         tools:layout="@layout/fragment_f_a_q__resources" >
+        <argument
+            android:name="searchTerm"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
         <action
             android:id="@+id/action_FAQ_Resources_to_how_To_Use"
             app:destination="@id/how_To_Use" />
