--- a/app/src/main/res/layout/fragment_how__to__use.xml
+++ b/app/src/main/res/layout/fragment_how__to__use.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/how_to_use_desc"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -29,8 +30,8 @@
         android:id="@+id/how_to_use_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_large"
         android:layout_marginHorizontal="@dimen/spacing_xxlarge"
+        android:layout_marginTop="@dimen/spacing_large"
         android:text="@string/how_to_use_intro"
         android:textAlignment="center"
         android:textColor="@color/dark_gray"
