--- a/app/src/main/res/layout/fragment_f_a_q__resources.xml
+++ b/app/src/main/res/layout/fragment_f_a_q__resources.xml
@@ -59,7 +59,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/spacing_medium"
         android:clipToPadding="false"
-        app:layout_constraintBottom_toTopOf="@+id/section_separator"
+        app:layout_constraintBottom_toTopOf="@id/section_separator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/faq_divider">
@@ -200,7 +200,7 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/separator_height"
         android:background="@color/light_gray_2"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_middle"
+        app:layout_constraintBottom_toTopOf="@id/guideline_middle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -245,7 +245,7 @@
         app:layout_constraintBottom_toTopOf="@id/bottom_nav_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resources_divider_line">
+        app:layout_constraintTop_toBottomOf="@id/resources_divider_line">
 
         <LinearLayout
             android:layout_width="match_parent"
